<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".CommentView"
    android:id="@+id/comments_ll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="8"
        >
        <Button
            android:id="@+id/comment_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Back"
            />
        <Button
            android:id="@+id/comment_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add"
            android:layout_marginLeft="230dp"
            />

    </LinearLayout>


    <ListView
        android:id="@+id/comments_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        />

</LinearLayout>
